# llm-wiki-research

./: .dockerignore  .env.example  .gitignore  .mcp.json  CLAUDE.md  DOCUMENTATION.md  Dockerfile  Makefile  README.md  alembic.ini  celerybeat-schedule  docker-compose.yml  pyproject.toml
.claude/: mcp-context-wiki.sh  mcp.json  settings.json
.claude/rules/: migrations.md  tests.md  workers.md
.kiro/hooks/: auto-ingest-on-save.json  generate-worker-tests.json  lint-after-wiki-edits.json  migration-reminder.json  security-scan.json
.kiro/settings/: mcp.json
.kiro/steering/: api-conventions.md  coding-rules.md  project-overview.md  testing-rules.md
.specify/: init-options.json
.specify/memory/: constitution.md
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_drift_and_provenance.py  0003_add_git_remote_columns.py
app/: config.py  dependencies.py  main.py
app/api/: router.py
app/auth/: jwt.py  rbac.py  schemas.py
app/core/: db.py  exceptions.py  logging.py  redis.py  storage.py
app/git/: diff_parser.py  repo_manager.py
app/llm/: client.py  prompt_cache.py
app/mcp/: response.py  server.py
app/models/: __init__.py  audit_log.py  ingest_job.py  knowledge_graph.py  lint_run.py  schema_config.py  source.py  user.py  wiki_page.py  workspace.py
app/retrieval/: graph_traversal.py  hybrid_ranker.py  vector_search.py
app/schemas/: status.py
app/services/: embedding_service.py  graph_service.py
portal/: Dockerfile  README.md  nginx.conf  package-lock.json  package.json
portal/src/: index.css  (+1 more)
tests/: conftest.py
tools/: mcp_auth_proxy.py
(+100 files in other folders)
